--- a/app/views/refinery/inquiries/inquiries/_form.html.erb
+++ b/app/views/refinery/inquiries/inquiries/_form.html.erb
@@ -29,7 +29,7 @@
       :placeholder => (t('message', :scope => 'activerecord.attributes.refinery/inquiries/inquiry') if Refinery::Inquiries.show_placeholders) %>
   </div>
   <div class="actions">
-    <%= f.submit t('.send') %>
-    <%= link_to t('.privacy_policy'), "/pages/privacy-policy", :id => "privacy_link" if Refinery::Inquiries.show_contact_privacy_link %>
+    <%= f.submit t('send', :scope => 'refinery.inquiries.inquiries.new') %>
+    <%= link_to t('privacy_policy', :scope => 'refinery.inquiries.inquiries.new'), "/pages/privacy-policy", :id => "privacy_link" if Refinery::Inquiries.show_contact_privacy_link %>
   </div>
 <% end %>
